  "python3" under Unix, not "python".

- Issue #15033: Fix the exit status bug when modules invoked using -m swith,
  return the proper failure return value (1). Patch contributed by Jeff Knupp.

- Issue #15229: An OSError subclass whose __init__ doesn't call back
  OSError.__init__ could produce incomplete instances, leading to crashes
  when calling str() on them.

Library
-------

- Issue #15056: imp.cache_from_source() and source_from_cache() raise
  NotImplementedError when sys.implementation.cache_tag is set to None.

- Issue #15256: Grammatical mistake in exception raised by imp.find_module().

- Issue #5931: wsgiref environ variable SERVER_SOFTWARE will specify an
  implementation specific term like Cpython, Jython instead of generic "Python"

- Issue #13248: Remove obsolete argument "max_buffer_size" of BufferedWriter
  and BufferedRWPair, from the io module.

- Issue #13248: Remove obsolete argument "version" of argparse.ArgumentParser.

- Issue #14814: implement more consistent ordering and sorting behaviour
  for ipaddress objects

- Issue #14814: ipaddress network objects correctly return NotImplemented
  when compared to arbitrary objects instead of raising TypeError

- Issue #14990: Correctly fail with SyntaxError on invalid encoding
  declaration.

- Issue #14814: ipaddress now provides more informative error messages when
  constructing instances directly (changes permitted during beta due to
  provisional API status)

- Issue #15247: FileIO now raises an error when given a file descriptor
  pointing to a directory.

- Issue #15261: Stop os.stat(fd) crashing on Windows when fd not open.

- Issue #15166: Implement imp.get_tag() using sys.implementation.cache_tag.

- Issue #15210: Catch KeyError when imprortlib.__init__ can't find
  _frozen_importlib in sys.modules, not ImportError.

- Issue #15030: importlib.abc.PyPycLoader now supports the new source size
  header field in .pyc files.
